--- a/practice/09_img_change/index.html
+++ b/practice/09_img_change/index.html
@@ -64,19 +64,31 @@
         <img src="../images/children/0.jpg" alt="" id="image" />
         <div class="imgNav">
           <div>
-            <a href="javascript:;" id="button0"></a>
-            <a href="javascript:;" id="button1"></a>
-            <a href="javascript:;" id="button2"></a>
-            <a href="javascript:;" id="button3"></a>
-            <a href="javascript:;" id="button4"></a>
-            <a href="javascript:;" id="button5"></a>
-            <a href="javascript:;" id="button6"></a>
-            <a href="javascript:;" id="button7"></a>
+            <a href="javascript:;"></a>
+            <a href="javascript:;"></a>
+            <a href="javascript:;"></a>
+            <a href="javascript:;"></a>
+            <a href="javascript:;"></a>
+            <a href="javascript:;"></a>
+            <a href="javascript:;"></a>
+            <a href="javascript:;"></a>
           </div>
         </div>
       </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script></script>
+    <script>
+      $(function () {
+        $(".imgNav > div > a").click(function () {
+          // $(".slideshow > img ").src = "../images/children/0.jpg";
+          let index = $(this).index();
+          $("#slideshow > img ").attr("src", `../images/children/${index}.jpg`);
+          $(".imgNav > div > a").removeClass("active");
+          $(this).addClass("active");
+        });
+
+        $(".imgNav > div > a").first().click();
+      });
+    </script>
   </body>
 </html>
