--- a/practice/10_css/index.html
+++ b/practice/10_css/index.html
@@ -26,6 +26,41 @@
       <div id="reset" class="button">清除</div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script></script>
+    <script>
+      $(function () {
+        let size = 32;
+        let target = $("#container h1");
+        $(".button").click(function () {
+          switch (this.id) {
+            case "big":
+              size++;
+              target.css({
+                fontSize: size + "px",
+              });
+              break;
+            case "small":
+              size--;
+              target.css({
+                fontSize: size + "px",
+              });
+              break;
+            case "red":
+              target.css({
+                color: "red",
+              });
+              break;
+            case "blue":
+              target.css({
+                color: "blue",
+              });
+              break;
+            case "reset":
+              target.attr("style", "");
+              // target.removeAttr("style");
+              break;
+          }
+        });
+      });
+    </script>
   </body>
 </html>
