--- a/practice/15_animate/index.html
+++ b/practice/15_animate/index.html
@@ -1,49 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>15_animate</title>
-    <link rel="stylesheet" href="../styles/style.css" />
-    <style>
-      .head{
-        margin: 0;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="container">
-      <h1>Javascript & Jquery快速入門與實戰</h1>
-      <p>
-        <a href="https://www.facebook.com/AlexOtakuWhat/" target="_blank" class="facebook">
-          <span>Alex宅幹嘛</span>
-        </a>
-        <a href="https://www.youtube.com/AlexOtakuWhat" target="_blank" class="youtube">
-          <span>Alex宅幹嘛</span>
-        </a>
-      </p>
-      <div class="head">
-        <img src="../images/head.png" width="100" />
-      </div>
-      </div>
-    </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script>
-      $(function(){
 
-        //self 不包含 padding,border,margin
-        //inner 包含 padding
-        //outer 包含 padding,border
-        //outer(true) 包含padding,border,margin
-        let leftLimit = $(window).width() - $('.head').outerWidth()
-        let buttomLimit = $(window).height() - $('.head').outerHeight()
-        $('.head').css({
-          position : "absolute",
-          top : buttomLimit,
-          left : leftLimit
-        })
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>15_animate</title>
+  <link rel="stylesheet" href="../styles/style.css" />
+  <style>
+    .head {
+      margin: 0;
+    }
+  </style>
+</head>
+
+<body>
+  <div id="container">
+    <h1>Javascript & Jquery快速入門與實戰</h1>
+    <p>
+      <a href="https://www.facebook.com/AlexOtakuWhat/" target="_blank" class="facebook">
+        <span>Alex宅幹嘛</span>
+      </a>
+      <a href="https://www.youtube.com/AlexOtakuWhat" target="_blank" class="youtube">
+        <span>Alex宅幹嘛</span>
+      </a>
+    </p>
+    <div class="head">
+      <img src="../images/head.png" width="100" />
+    </div>
+  </div>
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script>
+    $(function () {
+
+      //self 不包含 padding,border,margin
+      //inner 包含 padding
+      //outer 包含 padding,border
+      //outer(true) 包含padding,border,margin
+      let leftLimit = $(window).width() - $('.head').outerWidth()
+      let buttomLimit = $(window).height() - $('.head').outerHeight()
+      $('.head').css({
+        position: "absolute",
+        top: buttomLimit / 2,
+        left: leftLimit / 2
+      }).click(function () {
+        //fadeOut,fadeIn 淡出淡入
+        $(this).fadeOut().fadeIn().animate({
+          top: 0,
+          left: 0,
+        }, 800)
+        .delay(500)
+      }).click(function () {
+        $(this).animate({
+          top: 0,
+          left: leftLimit,
+        }, 800)
       })
-    </script>
-  </body>
+      .delay(500)
+      .click(function () {
+        $(this).animate({
+          top: buttomLimit,
+          left: leftLimit,
+        }, 800)
+      })
+      .delay(500)
+      .click(function () {
+        $(this).animate({
+          top: buttomLimit,
+          left: 0,
+        }, 800)
+      })
+      .delay(500)
+      .click(function () {
+        $(this).animate({
+          top: 0,
+          left: 0,
+        }, 800)
+      })
+    })
+  </script>
+</body>
+
 </html>
