--- a/practice/16_slide_box/index.html
+++ b/practice/16_slide_box/index.html
@@ -19,6 +19,17 @@
         top: 0;
         left: 0;
       }
+      .head > div {
+        position: absolute;
+        width: 200px;
+        height: 100px;
+        top: 0;
+        left: 0;
+      }
+
+      .head > div > img {
+        float: left;
+      }
     </style>
   </head>
   <body>
@@ -52,6 +63,25 @@
       </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script></script>
+    <script>
+      $(function () {
+        $(".head")
+          .children("div")
+          .hover(
+            function () {
+              $(this)
+                .stop()
+                .animate({
+                  left: ($(this).outerWidth() / 2) * -1,
+                });
+            },
+            function () {
+              $(this).stop().animate({
+                left: 0,
+              });
+            }
+          );
+      });
+    </script>
   </body>
 </html>
