fix imgs -> btns 命名錯誤的問題

--- a/practice/18_slideshow/index.html
+++ b/practice/18_slideshow/index.html
@@ -99,8 +99,10 @@
 
         function setView() {
           imgs.eq(now).fadeIn().siblings().fadeOut();
-          imgs.eq(now).addClass("active").siblings().removeClass("active");
+          btns.eq(now).addClass("active").siblings().removeClass("active");
         }
+
+        setView();
 
         btns.click(function () {
           now = $(this).index();
