用timer建立自動輪播

--- a/practice/18_slideshow/index.html
+++ b/practice/18_slideshow/index.html
@@ -102,12 +102,18 @@
           btns.eq(now).addClass("active").siblings().removeClass("active");
         }
 
-        setView();
-
         btns.click(function () {
           now = $(this).index();
           setView();
         });
+
+        function timerHandler(change = 1) {
+          now = (now + change) % imgs.length;
+          setView();
+          timer = setTimeout(timerHandler, 1000);
+        }
+
+        timerHandler(0);
       });
     </script>
   </body>
