--- a/practice/19_object_array/index.html
+++ b/practice/19_object_array/index.html
@@ -57,7 +57,82 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
-      
+      let sort = "id";
+      let firstSelect = null;
+      let classGrade = [
+        {
+          id: 1,
+          name: "Lisa",
+          ch: 85,
+          en: 93,
+          ma: 63,
+        },
+        {
+          id: 2,
+          name: "Brenda",
+          ch: 83,
+          en: 75,
+          ma: 66,
+        },
+        {
+          id: 3,
+          name: "Alex",
+          ch: 82,
+          en: 72,
+          ma: 97,
+        },
+        {
+          id: 4,
+          name: "Ricky",
+          ch: 73,
+          en: 62,
+          ma: 64,
+        },
+        {
+          id: 5,
+          name: "John",
+          ch: 81,
+          en: 82,
+          ma: 76,
+        },
+      ];
+      let viewData = createViewData(classGrade);
+
+      // console.log(viewData);
+      function createViewData() {
+        return classGrade.map(({ id, name, ch, en, ma }) => {
+          return {
+            id,
+            name,
+            ch,
+            en,
+            ma,
+            total: ch + en + ma,
+          };
+        });
+      }
+      function createDom({ id, name, ch, en, ma, total }) {
+        return `<tr>
+          <td>${id}</td>
+          <td>${name}</td>
+          <td>${ch}</td>
+          <td>${en}</td>
+          <td>${ma}</td>
+          <td>${total}</td>
+        </tr>`;
+      }
+
+      function changeView() {
+        viewData.filter(function (item) {
+          return item.ch >= 75;
+        });
+
+        viewData.forEach((element) => {
+          $("table").append(createDom(element));
+        });
+      }
+      changeView();
+
     </script>
   </body>
 </html>
